# BlankOBF-EDU-Toolkit

./: README.md  pyproject.toml  run_app.py
blankobf/: __init__.py  cli.py  engine.py  gui.py  report.py  utils.py
blankobf/assets/: theme_grey_light.json
blankobf/crypto/: __init__.py  bundle.py  filecrypt.py
blankobf/layers/: __init__.py  ip_table.py  xor_bruteforce_lab.py  zlib_b64_split.py
blankobf/transforms/: __init__.py  encode_constants.py  getattr_attributes.py  insert_dummy_comments.py  rename_identifiers.py  strip_docstrings.py
blankobf_edu_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: basic.py  classes.py  imports.py
examples/assets/: config.json  readme.txt
tests/: test_roundtrip.py
